--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="Deformable Neural Radiance Fields creates free-viewpoint portraits (nerfies) from casually captured videos.">
-  <meta name="keywords" content="Nerfies, D-NeRF, NeRF">
+        content="Aquatic-GS effectively represents underwater scenes, enabling novel underwater viewpoint synthesis and restoration.">
+  <meta name="keywords" content="Aquatic-GS, 3DGS, Underwater">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Nerfies: Deformable Neural Radiance Fields</title>
+  <title>Aquatic-GS:A Hybrid 3D Representation for Underwater Scenes</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -54,49 +54,56 @@
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">
             <img src="./static/images/AquaticGS_icon.png" alt="Icon" style="vertical-align: middle; width: 100px; height: 100px; margin-right: -10px;">
-            Nerfies: Deformable Neural Radiance Fields
+            Aquatic-GS:A Hybrid 3D Representation for Underwater Scenes
           </h1>
+          <!-- Add Authors Information -->
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://keunhong.com">Keunhong Park</a><sup>1</sup>,</span>
-            <span class="author-block">
-              <a href="https://utkarshsinha.com">Utkarsh Sinha</a><sup>2</sup>,</span>
-            <span class="author-block">
-              <a href="https://jonbarron.info">Jonathan T. Barron</a><sup>2</sup>,
+              <!-- <a href="https://keunhong.com">Shaohua Liu</a><sup>1</sup>,</span> -->
+              <a href="#">Shaohua Liu</a>,
             </span>
             <span class="author-block">
-              <a href="http://sofienbouaziz.com">Sofien Bouaziz</a><sup>2</sup>,
+              <!-- <a href="https://utkarshsinha.com">Junzhe Lu</a><sup>2</sup>,</span> -->
+              <a href="#">Junzhe Lu</a>,
             </span>
             <span class="author-block">
-              <a href="https://www.danbgoldman.com">Dan B Goldman</a><sup>2</sup>,
+              <a href="#">Zuoya Gu</a>,
             </span>
             <span class="author-block">
-              <a href="https://homes.cs.washington.edu/~seitz/">Steven M. Seitz</a><sup>1,2</sup>,
+              <a href="#">Jiajun Li</a>,
             </span>
-            <span class="author-block">
+            <!-- <span class="author-block">
               <a href="http://www.ricardomartinbrualla.com">Ricardo Martin-Brualla</a><sup>2</sup>
-            </span>
+            </span> -->
+            <span class="author-block">
+              <!-- <a href="#">Yue Deng</a><sup>1</sup> -->
+              <a href="#">Yue Deng</a>
+            </span>          
           </div>
 
+          <!-- Add Institution Information -->          
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>University of Washington,</span>
-            <span class="author-block"><sup>2</sup>Google Research</span>
+            <span class="author-block">Beihang University</span>
+            <!-- <span class="author-block"><sup>1</sup>Beihang University</span> -->
+            <!-- <span class="author-block"><sup>2</sup>Google Research</span> -->
           </div>
 
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
-              <span class="link-block">
-                <a href="https://arxiv.org/pdf/2011.12948"
+              <!-- <span class="link-block">
+                <a href="#"  
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
                   <span>Paper</span>
                 </a>
-              </span>
+              </span> -->
+              <!-- Arxiv Link -->
               <span class="link-block">
-                <a href="https://arxiv.org/abs/2011.12948"
+                <!-- <a href="https://arxiv.org/abs/2011.12948" -->
+                <a href="#"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -106,7 +113,7 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/google/nerfies"
+                <a href="https://github.com/deng-ai-lab/AquaticGS"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
@@ -116,12 +123,12 @@
               </span>
               <!-- Dataset Link. -->
               <span class="link-block">
-                <a href="https://github.com/google/nerfies/releases/tag/0.1"
+                <a href="# "
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
                   </span>
-                  <span>Data</span>
+                  <span>Data (Coming Soon)</span>
                   </a>
             </div>
 
@@ -138,45 +145,46 @@
     <!-- Display two side-by-side videos for teaser -->
     <div class="video-row">
       <div class="video-container">
-          <h4 class="video-title">With Water vs Without Water (Aquatic-GS)</h4>
+          <!-- <h4 class="video-title">3DGS vs Aquatic-GS</h4> -->
+          <h4 class="video-title" style="font-size: 1.3rem;">3DGS vs Aquatic-GS</h4>
           <video class="video" id="left-teaser-video" loop playsinline autoplay muted
-              src="static/videos/Car_3dgs_vs_aquaticgs.mp4" onplay="resizeAndPlay(this)"></video>
+              src="static/videos/Curacao_3dgs_vs_aquaticgs.mp4" onplay="resizeAndPlay(this)"></video>
           <canvas height=0 class="videoMerge" id="left-teaser-videoMerge"></canvas>
       </div>
       <div class="video-container">
-          <h4 class="video-title">SeaThru-NeRF vs Aquatic-GS</h4>
+          <!-- <h4 class="video-title">With Water vs Without Water (Aquatic-GS)</h4> -->
+          <h4 class="video-title" style="font-size: 1.3rem;">With Water vs Without Water (Aquatic-GS)</h4>
           <video class="video" id="right-teaser-video" loop playsinline autoplay muted
-              src="static/videos/Car_dewater_comparison.mp4" onplay="resizeAndPlay(this)"></video>
+              src="static/videos/Curacao_dewater_comparison.mp4" onplay="resizeAndPlay(this)"></video>
           <canvas height=0 class="videoMerge" id="right-teaser-videoMerge"></canvas>
       </div>
     </div>
 
     <!-- Abstract -->
-    <div class="columns is-centered has-text-centered">
+    <div class="columns is-centered has-text-centered" style="margin-top: 40px;">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            We present the first method capable of photorealistically reconstructing a non-rigidly
-            deforming scene using photos/videos captured casually from mobile phones.
+            3D representation of underwater scenes is a valuable yet challenging task due to the distance-dependent 
+            and wavelength-selective attenuation and scattering effects. These water effects cause even the most advanced 3D Gaussian Splatting (3DGS) 
+            methods to struggle with effectively representing underwater scenes, resulting in unrealistic colors and incorrect geometry. 
           </p>
           <p>
-            Our approach augments neural radiance fields (NeRF) by optimizing an
-            additional continuous volumetric deformation field that warps each observed point into a
-            canonical 5D NeRF. We observe that these NeRF-like deformation fields are prone to local minima, and
-            propose a coarse-to-fine optimization method for coordinate-based models that allows for
-            more robust optimization. By adapting principles from geometry processing and physical simulation to NeRF-like
-            models, we propose an elastic regularization of the deformation field that further
-            improves robustness.
+            In this study, we propose <strong>Aquatic-GS</strong>, a novel hybrid 3D representation approach for underwater scenes. 
+            Specifically, we construct a Neural Water Field (NWF) to implicitly model the water properties, 
+            while employing the 3DGS to explicitly model the water-free scene (i.e., without the influence of the water medium). 
+            The outputs of both components are then combined through a physics-based underwater image formation model, 
+            enabling the rendering of underwater scenes. To tackle the challenges water effects pose in accurately representing scene geometry and details, 
+            we design a Depth-Guided Optimization (DGO) mechanism that uses a pseudo-depth map to guide optimization for more precise scene representation. 
+            After optimization, Aquatic-GS not only enables the rendering of novel underwater viewpoints but also supports restoring the 
+            true appearance of underwater scenes, as if the water medium were absent. 
           </p>
           <p>
-            We show that <span class="dnerf">Nerfies</span> can turn casually captured selfie
-            photos/videos into deformable NeRF models that allow for photorealistic renderings of the subject from arbitrary
-            viewpoints, which we dub <i>"nerfies"</i>. We evaluate our method by collecting data
-            using a rig with two mobile phones that take time-synchronized photos, yielding train/validation
-            images of the same pose at different viewpoints. We show that our method faithfully
-            reconstructs non-rigidly deforming scenes and reproduces unseen views with high
-            fidelity.
+            Extensive experiments on both simulated and real-world datasets demonstrate that our Aquatic-GS 
+            surpasses existing NeRF-based underwater representations, achieving better rendering quality and 
+            real-time rendering performance with a 270x increase in speed. Furthermore, in terms of underwater scene restoration, 
+            our Aquatic-GS outperforms representative dewatering methods in visual fidelity, detail recovery, color correction, and stability. 
           </p>
         </div>
       </div>
@@ -200,7 +208,7 @@
       <div class="column is-one">
         <h3 class="title is-4">Aquatic-GS employs a hybrid manner to represent underwater 3D scenes</h3>
         <figure class="image" style="width: 60%; margin: 0 auto;">
-          <img src="static/images/HybridManner.png" alt="Aquatic-GS Scene Representation">
+          <img src="static/images/HybridManner.png" alt="Aquatic-GS's Hybrid Scene Representation Manner">
         </figure>
       </div>
     </div>
@@ -210,7 +218,7 @@
       <div class="column is-one">
         <h3 class="title is-4">The pipeline of Aquatic-GS</h3>
         <figure class="image">
-          <img src="static/images/pipeline.png" alt="Aquatic-GS Pipeline">
+          <img src="static/images/Pipeline.png" alt="Aquatic-GS Pipeline">
         </figure>
       </div>
     </div>
@@ -231,10 +239,13 @@
   <div class="container is-max-desktop">
       <h2 class="title is-4">Results of Underwater Novel Viewpoint Synthesis</h2>
       <p>
-          Below you can switch between different scenes and view the comparison between 3DGS v.s. Aquatic-GS on the left and SeatThru-NeRF v.s. Aquatic-GS on the right.
-          Select a scene:
+        Below, you can choose different scenes for comparison. 
+        On the left, you will see the comparison between 3DGS and Aquatic-GS; 
+        on the right, you will see the comparison between SeaThru-NeRF and Aquatic-GS. 
+        Please select a scene from the dropdown menu:
       </p>
-      <div class="tabs-widget">
+
+      <div class="tabs-widget" style="margin-top: 20px;">
           <div class="tabs is-centered is-toggle is-toggle-rounded is-small">
               <ul class="is-marginless" id="scene-tabs">
                   <li id="tab-Curacao"><a onclick="changeScene('Curacao')">Curacao</a></li>
@@ -260,13 +271,13 @@
       <!-- Display two side-by-side videos -->
       <div class="video-row">
         <div class="video-container">
-            <h4 class="video-title">3DGS vs Aquatic-GS</h4>
+            <h4 class="video-title" style="font-size: 1.3rem;">3DGS vs Aquatic-GS</h4>
             <video class="video" id="left-video" loop playsinline autoplay muted
                 src="static/videos/Curacao_3dgs_vs_aquaticgs.mp4" onplay="resizeAndPlay(this)"></video>
             <canvas height=0 class="videoMerge" id="left-videoMerge"></canvas>
         </div>
         <div class="video-container">
-            <h4 class="video-title">SeaThru-NeRF vs Aquatic-GS</h4>
+            <h4 class="video-title" style="font-size: 1.3rem;">SeaThru-NeRF vs Aquatic-GS</h4>
             <video class="video" id="right-video" loop playsinline autoplay muted
                 src="static/videos/Curacao_nerf_vs_aquaticgs.mp4" onplay="resizeAndPlay(this)"></video>
             <canvas height=0 class="videoMerge" id="right-videoMerge"></canvas>
@@ -336,10 +347,12 @@
   <div class="container is-max-desktop">
       <h2 class="title is-4">Results of Underwater Image Restoration</h2>
       <p>
-          Below you can switch between different scenes and view the comparison between with water and without water (SeaThru-NeRF v.s. Aquatic-GS).
-          Select a scene:
+          Below, you can choose different scenes for comparison. 
+          On the left, you can see our Aquatic-GS rendering of the underwater scene (with water) 
+          alongside the restored scene (without water). On the right, you can see the comparison between SeaThru-NeRF 
+          and Aquatic-GS in underwater scene restoration (de-water). Please select a scene from the dropdown menu:
       </p>
-      <div class="tabs-widget">
+      <div class="tabs-widget" style="margin-top: 20px;">
           <div class="tabs is-centered is-toggle is-toggle-rounded is-small">
               <ul class="is-marginless" id="restoration-tabs">
                   <!-- 场景选择 -->
@@ -358,13 +371,13 @@
       <!-- Display two side-by-side videos for restoration -->
       <div class="video-row">
         <div class="video-container">
-            <h4 class="video-title">With Water vs Without Water (Aquatic-GS)</h4>
+            <h4 class="video-title" style="font-size: 1.3rem;">With Water vs Without Water (Aquatic-GS)</h4>
             <video class="video" id="left-restoration-video" loop playsinline autoplay muted
                 src="static/videos/Car_dewater_comparison.mp4" onplay="resizeAndPlay(this)"></video>
             <canvas height=0 class="videoMerge" id="left-restoration-videoMerge"></canvas>
         </div>
         <div class="video-container">
-            <h4 class="video-title">SeaThru-NeRF vs Aquatic-GS</h4>
+            <h4 class="video-title" style="font-size: 1.3rem;">SeaThru-NeRF vs Aquatic-GS</h4>
             <video class="video" id="right-restoration-video" loop playsinline autoplay muted
                 src="static/videos/Car_dewater_nerf_vs_aquaticgs.mp4" onplay="resizeAndPlay(this)"></video>
             <canvas height=0 class="videoMerge" id="right-restoration-videoMerge"></canvas>
@@ -448,11 +461,11 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{park2021nerfies,
-  author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},
-  title     = {Nerfies: Deformable Neural Radiance Fields},
-  journal   = {ICCV},
-  year      = {2021},
+    <pre><code>@article{xxxxx,
+  author    = {xxxxx},
+  title     = {Aquatic-GS:A Hybrid 3D Representation for Underwater Scenes},
+  journal   = {xxxx},
+  year      = {2024},
 }</code></pre>
   </div>
 </section>
@@ -460,7 +473,7 @@
 
 <footer class="footer">
   <div class="container">
-    <div class="content has-text-centered">
+    <!-- <div class="content has-text-centered">
       <a class="icon-link"
          href="./static/videos/nerfies_paper.pdf">
         <i class="fas fa-file-pdf"></i>
@@ -468,7 +481,7 @@
       <a class="icon-link" href="https://github.com/keunhong" class="external-link" disabled>
         <i class="fab fa-github"></i>
       </a>
-    </div>
+    </div> -->
     <div class="columns is-centered">
       <div class="column is-8">
         <div class="content">
@@ -476,19 +489,13 @@
             This website is licensed under a <a rel="license"
                                                 href="http://creativecommons.org/licenses/by-sa/4.0/">Creative
             Commons Attribution-ShareAlike 4.0 International License</a>.
-          </p>
-          <p>
-            This means you are free to borrow the <a
-              href="https://github.com/nerfies/nerfies.github.io">source code</a> of this website,
-            we just ask that you link back to this page in the footer.
-            Please remember to remove the analytics code included in the header of the website which
-            you do not want on your website.
-          </p>
+            Website template credit to <a href="https://github.com/nerfies/nerfies.github.io">Nerfies</a>. 
+          </p>          
         </div>
       </div>
     </div>
   </div>
 </footer>
 
-</body>
+</body> 
 </html>
