--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
               </span> -->
               <!-- Arxiv Link -->
               <span class="link-block">
-                <!-- <a href="https://arxiv.org/abs/2011.12948" -->
-                <a href="#"
+                <a href="https://arxiv.org/abs/2411.00239"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -465,8 +464,8 @@
     <h2 class="title">BibTeX</h2>
     <pre><code>@article{liu2024aquatic,
   author    = {Shaohua Liu, Junzhe Lu, Zuoya Gu, Jiajun Li, and Yue Deng},
-  title     = {Aquatic-GS:A Hybrid 3D Representation for Underwater Scenes},
-  journal   = {xxxx},
+  title     = {Aquatic-GS: A Hybrid 3D Representation for Underwater Scenes},
+  journal   = {arXiv preprint arXiv:2411.00239},
   year      = {2024},
 }</code></pre>
   </div>
